test/tests/stages/18_structures/invalid_types/extra_credit/incompatible_union_types/union_pointer_branch_mismatch.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[36]:
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(u1)
  ;
  union
  identifier(u2)
  ;
  union
  identifier(u1)
  *
  identifier(ptr1)
  =
  const int(0)
  ;
  union
  identifier(u2)
  *
  identifier(ptr2)
  =
  const int(0)
  ;
  const int(1)
  ?
  identifier(ptr1)
  :
  identifier(ptr2)
  ;
  return
  const int(0)
  ;
  }
